--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
-#logo{
+#logo-div{
   padding-top: 96px;
+}
+#logo{
+  padding-top: 109px;
 }
 input{
   border-width: 0px;
-
+  height: 37px;
+  font-size: 16px;
+  width: 450px;
+  padding: 5px 8px 0px 20px;
+  background-color: transparent;
 }
 #search-box-div{
   height: 44px;
@@ -12,4 +19,7 @@ input{
   border-style: solid;
   border-color: #dedede;
   border-width: 1px;
+  font-family: Arial;
+  font-size: 13px;
+  margin-top: 20px;
 }
