--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 #logo{
   padding-top: 109px;
 }
-input{
+input[type="text"]{
   border-width: 0px;
   height: 37px;
   font-size: 16px;
@@ -22,4 +22,26 @@ input{
   font-family: Arial;
   font-size: 13px;
   margin-top: 20px;
+}
+.buttonsdiv{
+  padding-top: 25px;width: 487px;
+}
+input[type="submit"]{
+  height: 36px;
+  min-width: 54px;
+  padding: 0px 16px;
+  margin: 11px 4px;
+  background-color: #F2F2F2;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  border-bottom-width: 1px;
+  border-top-width: 1px;
+  border-left-width: 1px;
+  border-right-width: 1px;
+  border-top-color: #F2F2F2;
+  border-right-color: #F2F2F2;
+  border-bottom-color: #F2F2F2;
+  border-left-color: #F2F2F2;
 }
