--- a/style.css
+++ b/style.css
@@ -32,16 +32,13 @@ input[type="submit"]{
   padding: 0px 16px;
   margin: 11px 4px;
   background-color: #F2F2F2;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-  border-bottom-width: 1px;
-  border-top-width: 1px;
-  border-left-width: 1px;
-  border-right-width: 1px;
-  border-top-color: #F2F2F2;
-  border-right-color: #F2F2F2;
-  border-bottom-color: #F2F2F2;
-  border-left-color: #F2F2F2;
+  border-radius: 4px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #F2F2F2;
+  color: #4F6368;
+}
+input.button:hover{
+  color: black;
+  border-color: #dad8d8;
 }
