--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body, td, a, p .h{
+margin{
   font-family: arial,sans-serif;
 }
 body{
@@ -69,8 +69,20 @@ input.button:hover{
   height: 80px;
 }
 .secondary-footer-wrapper{
-
+  border-bottom: 1px solid #e4e4e4;
+  height: 40px;
 }
 .secondary-footer{
-
+  height: auto;
+}
+.location-span{
+  margin-left: 30px;
+  font-size: 15px;
+  text-align: left;
+  height: 35px;
+  line-height: 40px;
+  position: absolute;
+  left: 0;
+  font-family: arial, sans-serif;
+  color: #0000008a;
 }
